--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -32,4 +32,9 @@
         <item name="harmonizeCustomColor1">true</item>
         <item name="colorPrimaryInverse">@color/md_theme_light_inversePrimary</item>
     </style>
+    <style name="CalenderViewCustom" parent="ThemeOverlay.MaterialComponents.MaterialCalendar">
+        <item name="colorAccent">@color/md_theme_light_surfaceTint</item>
+        <item name="colorOnPrimary">@color/md_theme_light_inverseOnSurface</item>
+        <item name="colorSurface">@color/md_theme_dark_secondary</item>
+    </style>
 </resources>
